--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "fs": "^0.0.1-security",
-    "socket.io": "^4.7.4"
+    "fs": "^0.0.1-security"
   }
 }
